k8s/services/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-backend
  namespace: vault-prod
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-backend
  template:
    metadata:
      labels:
        app: vault-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      imagePullSecrets:
        - name: ghcr-login
      containers:
      - name: backend
        image: ghcr.io/victoragahi/vault-backend:bbbfa0bf70d85ad900b29c8037b51f129dea96df
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
