k8s/services/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-backend
  namespace: vault-prod
spec:
  type: NodePort
  selector:
    app: vault-backend
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 31416
    name: http
